fix spacing

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ section{margin-bottom:4rem;}
   box-shadow:0 2px 6px rgba(0,0,0,.05);
   display:flex;flex-direction:column;
   transition:transform .25s ease,box-shadow .25s ease;
+  justify-content: space-between;
 }
 .card-link:hover .project-card{
   transform:translateY(-6px) scale(1.02);
@@ -119,6 +120,7 @@ section{margin-bottom:4rem;}
   flex-direction: column;
   height: 100%;
   min-height: 400px; /* Adjust as needed */
+  justify-content: space-between;
 }
 
 .project-card img {
